# sinaptrixtwo

./: .env.example  .gitignore  AGENTS.md  ARQUITECTURA.md  CAPAS.md  CLAUDE.md  Dockerfile  GEMINI.md  INSTRUCCIONES.md  LIMPIEZA.md  README.md  WARP.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 001_create_users_table.py  002_create_leads_table.py  003_split_names.py  3b2088759edd_add_empresas_table_and_update_.py  3b2aea3cba82_add_location_tables_and_update_leads_.py  c194aa8ee0f0_add_authentication_models.py  da3d4a5997e0_add_servidores_table_for_iseries_.py  e31c624ddb1a_add_soft_delete_fields_to_user_model.py
docs/: COMPONENT_PATTERNS.md
scripts/: create_default_superuser.py  create_superuser.py  init_roles_permissions.py  restore_admin_role.py  seed_database.py  seed_locations.py  seed_servers.py  simple_create_superuser.py  start-docker.sh
src/: __init__.py  app.py  database.py  main.py
src/config/: __init__.py  settings.py
src/models/: __init__.py  base.py  enums.py  lead.py  user.py
src/models/auth/: __init__.py  permission.py  refresh_token.py  role.py  user.py
src/models/empresas/: __init__.py  empresa.py
src/models/infrastructure/: __init__.py  servidor.py
src/models/leads/: __init__.py  lead.py
src/models/locations/: __init__.py  city.py  (+2 more)
src/repositories/: __init__.py  base.py  lead_repository.py  user_repository.py  user_search_repository.py
src/schemas/: __init__.py  user.py
src/services/: __init__.py  lead_service.py  user_search_service.py  user_service.py
src/ui/: auth_middleware.py  layouts.py
(+63 files in other folders)
