[project]
name = "sinaptrixtwo"
version = "0.1.0"
description = "FastAPI + NiceGUI application with PostgreSQL"
authors = [
    {name = "Fernando Secchi"}
]
readme = "README.md"
requires-python = "^3.9"
dependencies = [
    "fastapi (>=0.121.2,<0.122.0)",
    "nicegui (>=3.3.1,<4.0.0)",
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "alembic (<1.14.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "pydantic (>=2.0.0,<3.0.0)",
    "email-validator (>=2.0.0,<3.0.0)",
    "python-jose[cryptography] (>=3.3.0,<4.0.0)",
    "passlib[bcrypt] (>=1.7.0,<2.0.0)",
    "python-multipart (>=0.0.5,<1.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
